@@ -227,6 +227,9 @@ line-home.shortcut=HOME
 logo.icon.medium=32x32/apps/isabelle.gif
 lookAndFeel=javax.swing.plaf.nimbus.NimbusLookAndFeel
 match-bracket.shortcut2=C+9
+navigator.back.shortcut=A+LEFT
+navigator.forward.shortcut=A+RIGHT
+navigator.showOnToolbar=true
 next-bracket.shortcut2=C+e C+9
 plugin-blacklist.MacOSX.jar=true
 plugin.MacOSXPlugin.altDispatcher=false
@@ -264,7 +267,7 @@ view.gutter.lineNumbers=false
 view.gutter.selectionAreaWidth=18
 view.height=787
 view.middleMousePaste=true
-view.showToolbar=false
+view.showToolbar=true
 view.thickCaret=true
 view.title=Isabelle/jEdit -\u0020
 view.width=1072
